заменен запрос в сисероне(теперь без временных таблиц)